data/derived/comb/progs/unify/prog4426.ml.out
Characters 307-308:
  removeZero (mul l);;
                  ^
Error: This expression has type 'a list
       but an expression was expected of type 'b * int list
